--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
-#ana-baslik {
-    /* Sonuna !important ekleyerek diğer tüm kuralları geçersiz kılıyoruz */
-    font-family: 'Courier New', Courier, monospace !important;
-    font-weight: bold !important;
+body {
+  background-color: lightblue;
 }
