--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@
     text-shadow: 0 0 10px rgba(255, 255, 255, 0.616); /* Hafif neon parlaması */
 }
 
-#text {
+h5 {
   font-family: sans-serif;
   color: #a3a3a3;
 }
